get cmdLineTests/jvmtitests ready for JDK11
- change to use jdk.internal.misc.Unsafe
- add jvmtitests_excludes_SE110.xml
- remove unused --add-modules java.se.ee in UnsafeTest build.xml

Issue: #2071

[ci skip]

Signed-off-by: lanxia <lan_xia@ca.ibm.com>