@@ -63,7 +63,6 @@
 				</javac>
 			</then>
 			<else>
-				<property name="addModules" value="--add-modules java.se.ee" />
 				<javac srcdir="${src}" destdir="${build}" debug="true" fork="true" executable="${compiler.javac}" includeAntRuntime="false" encoding="ISO-8859-1">
 					<src path="${src_90}" />
 					<src path="${transformerListener}" />
